plogapp/tests/errors/undefinedSortInFuncSortExpr.plog
sorts

#s = {a}.
#s2 = f(#s, #s1).

attributes

statements

